@@ -71,6 +71,7 @@ class DiskIO {
       int Write(void* buffer, int numBytes);
       int DiskSync(void); // resync disk caches to use new partitions
       int GetBlockSize(void);
+      int GetPhysBlockSize(void);
       uint32_t GetNumHeads(void);
       uint32_t GetNumSecsPerTrack(void);
       int IsOpen(void) {return isOpen;}
